--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,21 +1,37 @@
 name: Generate Datas
+
 on:
   schedule: # execute every 12 hours
     - cron: "* */12 * * *"
   workflow_dispatch:
+  push:
+    branches:
+    - main
+
 jobs:
   build:
     name: Jobs to update datas
     runs-on: ubuntu-latest
+    permissions:
+      contents: write # REQUIRED to fix the 403 error
+    
     steps:
-      # Snake Animation
-      - uses: Platane/snk@master
+      # Step 1: Checkout the repository (Best practice to avoid errors)
+      - uses: actions/checkout@v4
+
+      # Step 2: Snake Animation (Updated to v3 to fix deprecation warnings)
+      - uses: Platane/snk/svg-only@v3
         id: snake-gif
-  
         with:
           github_user_name: kunwar1908
-          svg_out_path: dist/github-contribution-grid-snake.svg
-      - uses: crazy-max/ghaction-github-pages@v2.1.3
+          outputs: |
+            dist/github-contribution-grid-snake.svg
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      # Step 3: Deploy to the 'output' branch (Updated to v4)
+      - uses: crazy-max/ghaction-github-pages@v4
         with:
           target_branch: output
           build_dir: dist
